# CCD_Capture

./: .gitignore  CMakeLists.txt  FindCFITSIO.cmake  README.md  Readme.md  basestructs.h  ccdcapture.c  ccdcapture.h  ccdcapture.pc.in  ccdfunc.c  ccdfunc.h  client.c  client.h  cmdlnopts.c  cmdlnopts.h  events.c  events.h  imageview.c  imageview.h  main.c  omp.h  server.c  server.h  socket.c  socket.h
APOGEE_cameras/: CMakeLists.txt  apogee.c
Astar_cameras/: CMakeLists.txt  artifical_star.c
BASLER_cameras/: CMakeLists.txt  FindBASLER.cmake  basler.c
Dummy_cameras/: CMakeLists.txt  dummyfunc.c  dummyfunc.h
EXAMPLE_for_cameras/: CMakeLists.txt  example.c
FLI_cameras/: CMakeLists.txt  flifunc.c  flifunc.h  fliusb.rules
GRH_cameras/: CMakeLists.txt  FindFLYCAP.cmake  grasshopper.c
HIKROBOT_cameras/: CMakeLists.txt  mvsfunc.c
TOUPCAM_cameras/: CMakeLists.txt  toupcam.c
ZWO_cameras/: CMakeLists.txt  asi.rules  zwofunc.c  zwofunc.h
examples/: CMakeLists.txt  ccd_client.c  centroids.c  main.c
locale/ru/: messages.po  ru.po  ru.po.bkp
locale/ru/LC_MESSAGES/: ccd_capture.mo
